force-app/main/default/objects/WhatsAppMessage__c/WhatsAppMessage__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Message</label>
    <nameField>
        <displayFormat>WM-{0000000}</displayFormat>
        <label>WhatsApp Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Message</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>