force-app/main/default/objects/WhatsAppMessage__c/fields/WhatsAppGroup__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WhatsApp Group</label>
    <referenceTo>WhatsAppGroup__c</referenceTo>
    <relationshipLabel>WhatsApp Message</relationshipLabel>
    <relationshipName>WhatsApp_Message</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>