force-app/main/default/objects/WhatsAppMessage__c/fields/WhatsAppMessage__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppMessage__c</fullName>
    <label>WhatsApp Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>