force-app/main/default/objects/WhatsAppMessage__c/fields/WhatsAppMsgTemplate__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppMsgTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WhatsApp Msg Template</label>
    <referenceTo>WhatsAppMsgTemplates__c</referenceTo>
    <relationshipLabel>WhatsApp Message</relationshipLabel>
    <relationshipName>WhatsApp_Message</relationshipName>
    <type>Lookup</type>
</CustomField>