force-app/main/default/objects/WhatsAppMessage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WhatsAppGroup__c</columns>
    <columns>WhatsAppMsgTemplate__c</columns>
    <columns>WhatsAppMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>